--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,27 @@
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="414dp"
-        android:layout_height="461dp"
+        android:layout_width="381dp"
+        android:layout_height="423dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="20dp"
         android:visibility="visible"
         app:columnCount="4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:rowCount="4"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned"
+        app:rowCount="5"
         app:useDefaultMargins="true"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="152dp"
         tools:visibility="visible">
 
 
         <Button
             android:id="@+id/one"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="0"
             android:text="1"
@@ -32,8 +36,8 @@
 
         <Button
             android:id="@+id/two"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="1"
             android:text="2"
@@ -41,8 +45,8 @@
 
         <Button
             android:id="@+id/three"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="2"
             android:text="3"
@@ -50,8 +54,8 @@
 
         <Button
             android:id="@+id/plus"
-            android:layout_width="71dp"
-            android:layout_height="105dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:backgroundTint="#85CC00"
             android:onClick="inputClick"
             android:tag="3"
@@ -60,8 +64,8 @@
 
         <Button
             android:id="@+id/four"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="4"
             android:text="4"
@@ -69,8 +73,8 @@
 
         <Button
             android:id="@+id/five"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="5"
             android:text="5"
@@ -78,8 +82,8 @@
 
         <Button
             android:id="@+id/six"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="6"
             android:text="6"
@@ -87,8 +91,8 @@
 
         <Button
             android:id="@+id/minus"
-            android:layout_width="71dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:backgroundTint="#FF8800"
             android:onClick="inputClick"
             android:tag="7"
@@ -97,8 +101,8 @@
 
         <Button
             android:id="@+id/seven"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="8"
             android:text="7"
@@ -106,8 +110,8 @@
 
         <Button
             android:id="@+id/eight"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="9"
             android:text="8"
@@ -115,8 +119,8 @@
 
         <Button
             android:id="@+id/nine"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="10"
             android:text="9"
@@ -124,9 +128,9 @@
 
         <Button
             android:id="@+id/multiplication"
-            android:layout_width="71dp"
-            android:layout_height="104dp"
-            android:backgroundTint="?attr/colorSecondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal_200"
             android:onClick="inputClick"
             android:tag="11"
             android:text="*"
@@ -135,8 +139,8 @@
 
         <Button
             android:id="@+id/dot"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:backgroundTint="#DA00FF"
             android:onClick="inputClick"
             android:tag="12"
@@ -146,8 +150,8 @@
 
         <Button
             android:id="@+id/zero"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="13"
             android:text="0"
@@ -155,50 +159,64 @@
 
         <Button
             android:id="@+id/clear"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:backgroundTint="@android:color/holo_red_dark"
             android:onClick="inputClick"
             android:tag="14"
-            android:text="C"
+            android:text="CE"
             android:textSize="40sp" />
 
         <Button
             android:id="@+id/division"
-            android:layout_width="71dp"
-            android:layout_height="104dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:backgroundTint="#F1DD2F"
             android:onClick="inputClick"
             android:tag="15"
             android:text="/"
             android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/leftBracket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:onClick="inputClick"
+            android:tag="16"
+            android:text="("
+            android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/rightBracket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:onClick="inputClick"
+            android:tag="17"
+            android:text=")"
+            android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:onClick="inputClick"
+            android:tag="18"
+            android:text="C"
+            android:textSize="40sp" />
+
+        <Button
+            android:id="@+id/equals"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#21E10A"
+            android:onClick="inputClick"
+            android:tag="19"
+            android:text="="
+            android:textSize="40sp" />
     </androidx.gridlayout.widget.GridLayout>
-
-    <TextView
-        android:id="@+id/resultTextView"
-        android:layout_width="420dp"
-        android:layout_height="52dp"
-        android:text="Result"
-        android:textSize="35sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="79dp" />
-
-    <Button
-        android:id="@+id/equals"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#16D81D"
-        android:text="="
-        android:onClick="equalsClick"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="629dp" />
 
     <Switch
         android:id="@+id/darkMode"
@@ -208,5 +226,22 @@
         android:text="Dark Mode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextNumberSigned"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
+        android:ems="10"
+        android:inputType="numberDecimal|numberSigned"
+        android:textSize="40sp"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/darkMode" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
