--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,7 +212,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#21E10A"
-            android:onClick="inputClick"
+            android:onClick="equalsClick"
             android:tag="19"
             android:text="="
             android:textSize="40sp" />
