--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="0"
-            android:text="1"
+            android:text="@string/_1"
             android:textSize="40sp" />
 
         <Button
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="1"
-            android:text="2"
+            android:text="@string/_2"
             android:textSize="40sp" />
 
         <Button
@@ -50,7 +50,8 @@
             android:onClick="inputClick"
             android:tag="2"
             android:text="3"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/plus"
@@ -60,7 +61,8 @@
             android:onClick="inputClick"
             android:tag="3"
             android:text="+"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/four"
@@ -69,7 +71,8 @@
             android:onClick="inputClick"
             android:tag="4"
             android:text="4"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/five"
@@ -78,7 +81,8 @@
             android:onClick="inputClick"
             android:tag="5"
             android:text="5"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/six"
@@ -86,7 +90,7 @@
             android:layout_height="wrap_content"
             android:onClick="inputClick"
             android:tag="6"
-            android:text="6"
+            android:text="@string/_6"
             android:textSize="40sp" />
 
         <Button
@@ -97,7 +101,8 @@
             android:onClick="inputClick"
             android:tag="7"
             android:text="-"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/seven"
@@ -106,7 +111,8 @@
             android:onClick="inputClick"
             android:tag="8"
             android:text="7"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/eight"
@@ -115,7 +121,8 @@
             android:onClick="inputClick"
             android:tag="9"
             android:text="8"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/nine"
@@ -124,7 +131,8 @@
             android:onClick="inputClick"
             android:tag="10"
             android:text="9"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/multiplication"
@@ -135,7 +143,8 @@
             android:tag="11"
             android:text="*"
             android:textAlignment="center"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/dot"
@@ -146,7 +155,8 @@
             android:tag="12"
             android:text="."
             android:textAlignment="center"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/zero"
@@ -155,7 +165,8 @@
             android:onClick="inputClick"
             android:tag="13"
             android:text="0"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/clear"
@@ -165,7 +176,8 @@
             android:onClick="inputClick"
             android:tag="14"
             android:text="CE"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/division"
@@ -175,7 +187,8 @@
             android:onClick="inputClick"
             android:tag="15"
             android:text="/"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/leftBracket"
@@ -185,7 +198,8 @@
             android:onClick="inputClick"
             android:tag="16"
             android:text="()"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/power"
@@ -195,7 +209,8 @@
             android:onClick="inputClick"
             android:tag="17"
             android:text="^"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/delete"
@@ -205,7 +220,8 @@
             android:onClick="inputClick"
             android:tag="18"
             android:text="C"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/equals"
@@ -215,7 +231,8 @@
             android:onClick="equalsClick"
             android:tag="19"
             android:text="="
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            tools:ignore="HardcodedText" />
     </androidx.gridlayout.widget.GridLayout>
 
     <Switch
@@ -225,7 +242,8 @@
         android:layout_marginTop="10dp"
         android:text="Dark Mode"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />
 
     <TextView
         android:id="@+id/resultTextView"
